--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,6 +121,25 @@ footer .contato {
     align-items: center;
 }
 
+/* Utilização do ícone de telefone antes do título "Contato"(before) + Animação */
+footer h2.contato-titulo::before {
+  content: "📞 ";
+  color: #f5c16c;
+  display: inline-block;
+  font-size: 1.5rem;
+  animation: vibrar 1.8s infinite ease-in-out;
+}
+
+/* Utilização do ícone de taça de vinho depois do título "Fale Conosco"(after) + Animação */
+footer h2.faleconosco-titulo::after {
+  content: " 🍷";
+  color: #f5c16c;
+  display: inline-block;
+  font-size: 1.5rem;
+  animation: brindar 2.5s infinite ease-in-out;
+}
+
+
 footer h2 {
     font-size: 1.2rem;
     margin-bottom: 10px;
@@ -191,14 +210,14 @@ form button:active {
     box-shadow: inset 0 2px 6px rgba(0,0,0,0.4);
 }
 
-        .copy {
+ .copy {
             text-align: center;
             width: 100%;
             margin-top: 20px;
             font-size: 0.9rem;
             color: #ccc;
         }
-        h2{
+ h2{
     text-align: center;
     font-family: 'Arial', sans-serif;
     padding: 40px 20px 20px 20px; 
@@ -213,6 +232,18 @@ p{
     line-height: 1.2;
     text-align: justify;
 }
+
+/* Estilo para a primeira letra do parágrafo(::first-letter */
+.primeira-letra::first-letter {
+    font-size: 2.5rem;
+    color: #722F37;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000;
+    margin-right: 5px;
+    float: left;
+    line-height: 1;
+}
+
 .imagem-historia {
     display: block;
     margin: 0 auto 20px auto;
